...

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBackBookDetail"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:layout_marginLeft="@dimen/margin_medium_2"
                app:srcCompat="@drawable/ic_baseline_arrow_back_ios_new_24"
                app:tint="@color/colorSecondaryText"
                android:layout_width="24dp"
                android:layout_height="24dp" />
...
                app:srcCompat="@drawable/profile"
                android:scaleType="centerCrop"
                android:layout_width="100dp"
                android:layout_height="120dp" />

            <TextView
                android:id="@+id/tvBookNameInBookDetail"
                android:text="Gone With The Wind"
                android:layout_toEndOf="@id/ivBookCoverInBookDetail"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:textSize="@dimen/text_regular_3x"
                android:fontFamily="@font/inter_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvBookAuthorInBookDetail"
                android:text="0 Books"
                android:layout_toEndOf="@id/ivBookCoverInBookDetail"
                android:layout_alignStart="@id/tvBookNameInBookDetail"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_below="@id/tvBookNameInBookDetail"
                android:layout_width="wrap_content"
...
